[tool.poetry]
name = "lobs5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.31"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
chex = "^0.1.86"
auto-mix-prep = "^0.2.0"
datasets = "^2.20.0"
einops = "^0.8.0"
flax = "0.8.5"
gym = "^0.26.2"
line-profiler = "^4.1.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
wandb = "^0.17.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
